--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
       </div>
 
       <div class="weather-box">
-        <img src="/image-folder/mist.png" alt="mist" />
-        <p class="temp">16°c</p>
+        <img src="/images/mist.png" alt="mist"/>
+        <p class="temp">0°c</p>
         <p class="description">Broken Clouds</p>
       </div>
 
       <div class="weather-detail">
         <div class="atmosphere">
-          <img src="/image-folder/humidity.png" alt="" />
-          <div class="text">
-            <p>20%</p>
+          <img src="/images/humidity.png" alt="" />
+          <div class="humidity">
+            <p>0%</p>
             <p>Humidity</p>
           </div>
         </div>
         <div class="atmosphere">
-          <img src="/image-folder/wind.png" alt="" />
-          <div class="text">
+          <img src="/images/wind.png" alt="" />
+          <div class="wind">
             <p>0km/h</p>
             <p>Wind</p>
           </div>
