--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <input type="text" placeholder="Please enter your city" />
         <button class="fa-solid fa-magnifying-glass"></button>
       </div>
+      <div class="error">
+        <p>Oops! Location Not Found</p>
+      </div>
 
       <div class="weather-box">
         <img src="/images/mist.png" alt="mist"/>
